进一步优化 - 并行执行, Files.readString, Files.write(... iterator)